laborations/lab2/testsuite/good/core112.cc
int main() {
  double d = 2.0;
  printDouble(d);
  d++;
  printDouble(d);
  d--;
  printDouble(d);

  return 0;
}

//void printDouble(double x) { }
