laborations/lab2/testsuite/bad/bad126.cc
int main () {
  bool x = true;
  x++;
  return 0;
}
